fixed spacing issue in how it works section

--- a/css/queries.css
+++ b/css/queries.css
@@ -217,6 +217,9 @@
       padding: 9.6rem 0 6.4rem 0;
     }
 
+    .section-how {
+      padding-bottom: 3.2rem;
+    }
     .hero {
       padding: 0 3.2rem;
     }
